# poetex

./: .gitignore  .pre-commit-config.yaml  README.md  local_env.py  make.bat  make.py  pyproject.toml  requirements.txt
.github/workflows/: jekyll-gh-pages.yml  python-ci.yml
docs/: conf.py  index.rst
docs/api/: api.rst
docs/categorisation/: bibtex.rst  categorisation.rst
docs/source/: modules.rst  poetex.database.rst  poetex.file_manager.rst  poetex.latex.rst  poetex.poetry.rst  poetex.rst  poetex.utils.rst  tools.rst
example/: main.tex  references.bib  title_page.tex
example/poems/: 0_lorem_ipsum.tex
poetex/: constants.py  poem.py  poetry.py  utils.py
poetex/database/: dataclasses.py
poetex/file_manager/: manager.py
poetex/latex/: builder.py
poetex/latex/templates/: main.tex  references.bib
poetex/poetry/: poem.py  poetry.py
poetex/test/: test_poem.py
poetex/tests/: poem_tests.py  test_poem.py
poetex/utils/: constants.py  utils.py
source/: a_birthday_present.txt  lorem_ipsum.txt  morning_song.txt
tools/: check_commit_message.py
