[tool.poetry]
name = "poetex"
version = "0.1.0"
description = ""
authors = ["Icaro"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sphinx = "^7.2.6"
pydantic = "^2.4.2"
furo = "^2023.9.10"
sphinx-autodoc-typehints = "^1.25.2"
autodoc-pydantic = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
black = "^23.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
