[tool.poetry]
name = "poetex"
version = "0.1.0"
description = ""
authors = ["Icaro"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.4.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
black = "^23.11.0"
furo = "^2023.9.10"
sphinx = "^7.2.6"
sphinx-autodoc-typehints = "^1.25.2"
autodoc-pydantic = "^2.0.1"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"

[tool.coverage.run]
omit = ["tests/*", "*/__init__.py"]
exclude_also = ["if __name__ == .__main__.:", ]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
